Libtaskmanager: invalidate filter on source row insertion

When a source row is inserted, is possible it's a row we have either
a launcher or a startup entry existing, which will now need to be
filtered out. previously it was emitting dataChanged on the source
launcher or startup task, causing then a reevaluation of the filter.
But since we still were in the rowsInserted handler, the state
might have not been settled yet, so
TaskManager::TaskGroupingProxyModel::Private::sourceDataChanged
could find itself with an invalid source index, triggering an assert.

Instead simply call invalidateFilter, which will cause all the
filterAcceptsRow to be called again at the right moment.
It is a bit more inefficient as the row iteration will be done for
each entry instead of only as many times as there are new rows,
but should be much safer.

### Test plan

launch an app, the startup task should still change immediately to
the "real" one as soon the window appears without the task being
duplicated for a split second. same thing when starting a task from a
launcher.

### Bugs fixed

BUG:520065